--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 						<div class="grid__item" style="background-image: url(img/14.jpg)"></div>
 						<div class="grid__item" style="background-image: url(img/15.jpg)"></div>
 						<div class="grid__item" style="background-image: url(img/16.jpg)"></div>
+						<div class="grid__item" style="background-image: url(Screen Shot 2022-04-05 at 10.37.47 AM.png)"></div>
 					</div>
 					<div class="grid grid--layout-2">
 						<div class="grid__item" style="background-image: url(img/17.jpg)"></div>
